@@ -2,18 +2,17 @@ package com.um.prog2.businessservice.service;
 
 import com.um.prog2.businessservice.client.DataServiceClient;
 import com.um.prog2.businessservice.dto.CategoriaDTO;
+import com.um.prog2.businessservice.model.Categoria;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class CategoriaBusinessServiceTest {
@@ -25,12 +24,10 @@ class CategoriaBusinessServiceTest {
     private CategoriaBusinessService categoriaBusinessService;
 
     @Test
-    void cuandoObtenerTodasLasCategorias_entoncesDebeLlamarAlClienteFeign() {
-        // Arrange
-        CategoriaDTO categoriaMock = new CategoriaDTO(1L, "Test Category", "Description");
-        List<CategoriaDTO> listaEsperada = Collections.singletonList(categoriaMock);
-
-        when(dataServiceClient.obtenerTodasLasCategorias()).thenReturn(listaEsperada);
+    void cuandoObtenerTodasLasCategorias_entoncesRetornaListaDeDTOs() {
+        // Arrange: Preparamos los 'Models'.
+        Categoria categoriaModel = new Categoria(1L, "Electrónica Model", "Descripción");
+        when(dataServiceClient.obtenerTodasLasCategorias()).thenReturn(List.of(categoriaModel));
 
         // Act
         List<CategoriaDTO> resultado = categoriaBusinessService.obtenerTodasLasCategorias();
@@ -38,7 +35,6 @@ class CategoriaBusinessServiceTest {
         // Assert
         assertNotNull(resultado);
         assertEquals(1, resultado.size());
-        assertEquals("Test Category", resultado.get(0).getNombre());
-        verify(dataServiceClient, times(1)).obtenerTodasLasCategorias();
+        assertEquals("Electrónica Model", resultado.get(0).getNombre());
     }
 }
